<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kinvey.bookshelf.ShelfActivity">
    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_pull"
        android:orderInCategory="100"
        android:title="@string/action_pull"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_push"
        android:orderInCategory="100"
        android:title="@string/action_push"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_purge"
        android:orderInCategory="100"
        android:title="@string/action_purge"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_facebook_login"
        android:orderInCategory="100"
        android:title="@string/action_facebook_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>


</menu>
